--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,7 @@ repository = "https://github.com/dawsonbooth/pong-ai"
 
 [tool.poetry.dependencies]
 python = "^3.8"
+arcade = "^2.5.6"
 
 [tool.poetry.dev-dependencies]
 autoflake = "^1.4"
